# llm-demo

./: .gitignore  README.md  pyproject.toml  run-checks.sh  setup.cfg
.github/actions/pyenv/: actions.yml
.github/workflows/: code-quality.yaml
llm_demo/: app.py  dependencies.py  schemas.py  services.py  tokenizers.py
tests/: conftest.py  test_api.py  test_services.py  test_tokenizer.py
